--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,14 @@
     "wpackagist-plugin/lh-hsts": "^1.24",
     "wpackagist-plugin/pantheon-advanced-page-cache": ">=0.3.0",
     "wpackagist-plugin/wp-native-php-sessions": ">=0.6.9",
-    "wpackagist-theme/twentynineteen": "^1.2"
+    "wpackagist-plugin/autodescription": "^4.0.1",
+    "wpackagist-plugin/code-syntax-block": "*",
+    "wpackagist-plugin/post-meta-controls": "^1.3.3",
+    "wpackagist-plugin/redirection": "^5",
+    "wpackagist-plugin/safe-svg": "*",
+    "wpackagist-plugin/svg-autocrop": "^0.1.0",
+    "wpackagist-plugin/wp-mail-smtp": "^3.0.3",
+    "wpackagist-plugin/leadin":"*"
   },
   "require-dev": {
     "behat/mink-goutte-driver": "^1.2.1",
